--- a/Data Pre Processing.ipynb
+++ b/Data Pre Processing.ipynb
@@ -6,7 +6,10 @@
    "id": "be4c3cf5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as n\n",
+    "import "
+   ]
   }
  ],
  "metadata": {
