--- a/Data Pre Processing.ipynb
+++ b/Data Pre Processing.ipynb
@@ -2,21 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be4c3cf5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as n\n",
-    "import "
+    "import pandas as p\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ed9d44c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's Go!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5352515e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ds_course-user",
    "language": "python",
-   "name": "python3"
+   "name": "ds_course-user"
   },
   "language_info": {
    "codemirror_mode": {
@@ -28,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
